--- a/index.html
+++ b/index.html
@@ -400,9 +400,16 @@ Created by pixpalette.com - online design magazine -->
                         <iframe src="https://www.google.com/maps/d/embed?mid=1UMEBYRnM0KZhrhqikVv3YigwUd0" width="640" height="300"></iframe>
                     </div> -->
                     <div role="tabpanel" class="tab-pane fade" id="termCondition">
-           				<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
-                        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
-                        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+           				<h4>Karya Lomba Poster tentang inovasi syariah finance dalam era industrialisasi 4.0.<br>
+                            .
+                            .
+                            <br>Implementasi Revolusi Keuangan Digital Syariah di Era 4.0. Dalam menerapkan sistem bagi hasil 100% Halal pada komunitas di bidang pendidikan, pariwisata, e-commerce, dana sosial keagamaan dan sektor lainnya.<br>
+                            <br>“Sinergitas industri keuangan syariah digital dan sektor nyata harus diperkuat. Transaksi sektor nyata di ekosistem dan komunitas perlu dihubungkan dengan  keuangan syariah digital. Contohnya, digitalisasi transaksi di bidang pendidikan yaitu pembayaran iuran sekolah, pengelolaan kantin sekolah, uang saku, dan lain sebagainya. Kedepannya, uang elektronik dan sektor nyata perlu saling terintegrasi dengan konsep open technology.”.<br>
+                            .
+                            <br>Inovasi ekonomi Islam Era 4.0.<br>
+                            .
+                            <br>"Uang elektronik Syariah Indonesia salah satunya inovasi di era 4.0 yaitu Mandiri Syariah Mobile adalah E-Wallet yang comply ke rules syariah,"  Fitur dan layanan E-Wallet Mandiri Syariah Mobile yang sudah ada bisa di kembangkan kembali dengan lebih canggih dan lebih memudahkan dalam bidang-bidang yang sudah disebutkan. Dengan Mandiri Syariah Mobile semakin mudah, praktis dan nyaman di masa New Normal seperti sekarang ini dalam bertransaksi.<br</h4>
+                        
                     </div>
                   </div>
                 
