--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Created by pixpalette.com - online design magazine -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>lOMBA POSTER BIDIKMISI WALISONGO</title>
+    <title>LOMBA POSTER BIDIKMISI WALISONGO</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
