--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					</div>
 				</div>
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-					<h2 class="heading-colored">Lomba &amp; Poster Ekobomi Islam</h2>
+					<h2 class="heading-colored"><!-- Lomba &amp; --> Lomba Poster Ekonomi Islam</h2>
 					<p>Implementasi Revolusi Keuangan Digital Syariah di Era 4.0. Dalam menerapkan sistem bagi hasil 100% Halal pada komunitas di bidang pendidikan, pariwisata, e-commerce, dana sosial keagamaan dan sektor lainnya.<br>
 						“Sinergitas industri keuangan syariah digital dan sektor nyata harus diperkuat. Transaksi sektor nyata di ekosistem dan komunitas perlu dihubungkan dengan  keuangan syariah digital. Contohnya, digitalisasi transaksi di bidang pendidikan yaitu pembayaran iuran sekolah, pengelolaan kantin sekolah, uang saku, dan lain sebagainya. Kedepannya, uang elektronik dan sektor nyata perlu saling terintegrasi dengan konsep open technology.”<br>
 						<br>
